syntax = "proto3";

option go_package = "grpc_api/domain/models";

package domain.models;

message StatusResponse{
    string status = 1;
}

message StatusRequest{
}